qt6/gen_qtextdocument.nim


proc fcQAbstractUndoItem_undo(self: pointer, ): void {.importc: "QAbstractUndoItem_undo".}
proc fcQAbstractUndoItem_redo(self: pointer, ): void {.importc: "QAbstractUndoItem_redo".}
proc fcQAbstractUndoItem_operatorAssign(self: pointer, param1: pointer): void {.importc: "QAbstractUndoItem_operatorAssign".}
proc fcQAbstractUndoItem_delete(self: pointer) {.importc: "QAbstractUndoItem_delete".}
proc fcQTextDocument_new(): ptr cQTextDocument {.importc: "QTextDocument_new".}
proc fcQTextDocument_new2(text: struct_miqt_string): ptr cQTextDocument {.importc: "QTextDocument_new2".}
proc fcQTextDocument_new3(parent: pointer): ptr cQTextDocument {.importc: "QTextDocument_new3".}
proc fcQTextDocument_new4(text: struct_miqt_string, parent: pointer): ptr cQTextDocument {.importc: "QTextDocument_new4".}
proc fcQTextDocument_metaObject(self: pointer, ): pointer {.importc: "QTextDocument_metaObject".}
proc fcQTextDocument_metacast(self: pointer, param1: cstring): pointer {.importc: "QTextDocument_metacast".}
proc fcQTextDocument_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QTextDocument_metacall".}
proc fcQTextDocument_tr(s: cstring): struct_miqt_string {.importc: "QTextDocument_tr".}
proc fcQTextDocument_clone(self: pointer, ): pointer {.importc: "QTextDocument_clone".}
proc fcQTextDocument_isEmpty(self: pointer, ): bool {.importc: "QTextDocument_isEmpty".}
proc fcQTextDocument_clear(self: pointer, ): void {.importc: "QTextDocument_clear".}
proc fcQTextDocument_setUndoRedoEnabled(self: pointer, enable: bool): void {.importc: "QTextDocument_setUndoRedoEnabled".}
proc fcQTextDocument_isUndoRedoEnabled(self: pointer, ): bool {.importc: "QTextDocument_isUndoRedoEnabled".}
proc fcQTextDocument_isUndoAvailable(self: pointer, ): bool {.importc: "QTextDocument_isUndoAvailable".}
proc fcQTextDocument_isRedoAvailable(self: pointer, ): bool {.importc: "QTextDocument_isRedoAvailable".}
proc fcQTextDocument_availableUndoSteps(self: pointer, ): cint {.importc: "QTextDocument_availableUndoSteps".}
proc fcQTextDocument_availableRedoSteps(self: pointer, ): cint {.importc: "QTextDocument_availableRedoSteps".}
proc fcQTextDocument_revision(self: pointer, ): cint {.importc: "QTextDocument_revision".}
proc fcQTextDocument_setDocumentLayout(self: pointer, layout: pointer): void {.importc: "QTextDocument_setDocumentLayout".}
proc fcQTextDocument_documentLayout(self: pointer, ): pointer {.importc: "QTextDocument_documentLayout".}
proc fcQTextDocument_setMetaInformation(self: pointer, info: cint, param2: struct_miqt_string): void {.importc: "QTextDocument_setMetaInformation".}
proc fcQTextDocument_metaInformation(self: pointer, info: cint): struct_miqt_string {.importc: "QTextDocument_metaInformation".}
proc fcQTextDocument_toHtml(self: pointer, ): struct_miqt_string {.importc: "QTextDocument_toHtml".}
proc fcQTextDocument_setHtml(self: pointer, html: struct_miqt_string): void {.importc: "QTextDocument_setHtml".}
proc fcQTextDocument_toMarkdown(self: pointer, ): struct_miqt_string {.importc: "QTextDocument_toMarkdown".}
proc fcQTextDocument_setMarkdown(self: pointer, markdown: struct_miqt_string): void {.importc: "QTextDocument_setMarkdown".}
proc fcQTextDocument_toRawText(self: pointer, ): struct_miqt_string {.importc: "QTextDocument_toRawText".}
proc fcQTextDocument_toPlainText(self: pointer, ): struct_miqt_string {.importc: "QTextDocument_toPlainText".}
proc fcQTextDocument_setPlainText(self: pointer, text: struct_miqt_string): void {.importc: "QTextDocument_setPlainText".}
proc fcQTextDocument_characterAt(self: pointer, pos: cint): pointer {.importc: "QTextDocument_characterAt".}
proc fcQTextDocument_find(self: pointer, subString: struct_miqt_string): pointer {.importc: "QTextDocument_find".}
proc fcQTextDocument_find2(self: pointer, subString: struct_miqt_string, cursor: pointer): pointer {.importc: "QTextDocument_find2".}
proc fcQTextDocument_findWithExpr(self: pointer, expr: pointer): pointer {.importc: "QTextDocument_findWithExpr".}
proc fcQTextDocument_find3(self: pointer, expr: pointer, cursor: pointer): pointer {.importc: "QTextDocument_find3".}
proc fcQTextDocument_frameAt(self: pointer, pos: cint): pointer {.importc: "QTextDocument_frameAt".}
proc fcQTextDocument_rootFrame(self: pointer, ): pointer {.importc: "QTextDocument_rootFrame".}
proc fcQTextDocument_objectX(self: pointer, objectIndex: cint): pointer {.importc: "QTextDocument_object".}
proc fcQTextDocument_objectForFormat(self: pointer, param1: pointer): pointer {.importc: "QTextDocument_objectForFormat".}
proc fcQTextDocument_findBlock(self: pointer, pos: cint): pointer {.importc: "QTextDocument_findBlock".}
proc fcQTextDocument_findBlockByNumber(self: pointer, blockNumber: cint): pointer {.importc: "QTextDocument_findBlockByNumber".}
proc fcQTextDocument_findBlockByLineNumber(self: pointer, blockNumber: cint): pointer {.importc: "QTextDocument_findBlockByLineNumber".}
proc fcQTextDocument_begin(self: pointer, ): pointer {.importc: "QTextDocument_begin".}
proc fcQTextDocument_endX(self: pointer, ): pointer {.importc: "QTextDocument_end".}
proc fcQTextDocument_firstBlock(self: pointer, ): pointer {.importc: "QTextDocument_firstBlock".}
proc fcQTextDocument_lastBlock(self: pointer, ): pointer {.importc: "QTextDocument_lastBlock".}
proc fcQTextDocument_setPageSize(self: pointer, size: pointer): void {.importc: "QTextDocument_setPageSize".}
proc fcQTextDocument_pageSize(self: pointer, ): pointer {.importc: "QTextDocument_pageSize".}
proc fcQTextDocument_setDefaultFont(self: pointer, font: pointer): void {.importc: "QTextDocument_setDefaultFont".}
proc fcQTextDocument_defaultFont(self: pointer, ): pointer {.importc: "QTextDocument_defaultFont".}
proc fcQTextDocument_setSuperScriptBaseline(self: pointer, baseline: float64): void {.importc: "QTextDocument_setSuperScriptBaseline".}
proc fcQTextDocument_superScriptBaseline(self: pointer, ): float64 {.importc: "QTextDocument_superScriptBaseline".}
proc fcQTextDocument_setSubScriptBaseline(self: pointer, baseline: float64): void {.importc: "QTextDocument_setSubScriptBaseline".}
proc fcQTextDocument_subScriptBaseline(self: pointer, ): float64 {.importc: "QTextDocument_subScriptBaseline".}
proc fcQTextDocument_setBaselineOffset(self: pointer, baseline: float64): void {.importc: "QTextDocument_setBaselineOffset".}
proc fcQTextDocument_baselineOffset(self: pointer, ): float64 {.importc: "QTextDocument_baselineOffset".}
proc fcQTextDocument_pageCount(self: pointer, ): cint {.importc: "QTextDocument_pageCount".}
proc fcQTextDocument_isModified(self: pointer, ): bool {.importc: "QTextDocument_isModified".}
proc fcQTextDocument_print(self: pointer, printer: pointer): void {.importc: "QTextDocument_print".}
proc fcQTextDocument_resource(self: pointer, typeVal: cint, name: pointer): pointer {.importc: "QTextDocument_resource".}
proc fcQTextDocument_addResource(self: pointer, typeVal: cint, name: pointer, resource: pointer): void {.importc: "QTextDocument_addResource".}
proc fcQTextDocument_allFormats(self: pointer, ): struct_miqt_array {.importc: "QTextDocument_allFormats".}
proc fcQTextDocument_markContentsDirty(self: pointer, fromVal: cint, length: cint): void {.importc: "QTextDocument_markContentsDirty".}
proc fcQTextDocument_setUseDesignMetrics(self: pointer, b: bool): void {.importc: "QTextDocument_setUseDesignMetrics".}
proc fcQTextDocument_useDesignMetrics(self: pointer, ): bool {.importc: "QTextDocument_useDesignMetrics".}
proc fcQTextDocument_setLayoutEnabled(self: pointer, b: bool): void {.importc: "QTextDocument_setLayoutEnabled".}
proc fcQTextDocument_isLayoutEnabled(self: pointer, ): bool {.importc: "QTextDocument_isLayoutEnabled".}
proc fcQTextDocument_drawContents(self: pointer, painter: pointer): void {.importc: "QTextDocument_drawContents".}
proc fcQTextDocument_setTextWidth(self: pointer, width: float64): void {.importc: "QTextDocument_setTextWidth".}
proc fcQTextDocument_textWidth(self: pointer, ): float64 {.importc: "QTextDocument_textWidth".}
proc fcQTextDocument_idealWidth(self: pointer, ): float64 {.importc: "QTextDocument_idealWidth".}
proc fcQTextDocument_indentWidth(self: pointer, ): float64 {.importc: "QTextDocument_indentWidth".}
proc fcQTextDocument_setIndentWidth(self: pointer, width: float64): void {.importc: "QTextDocument_setIndentWidth".}
proc fcQTextDocument_documentMargin(self: pointer, ): float64 {.importc: "QTextDocument_documentMargin".}
proc fcQTextDocument_setDocumentMargin(self: pointer, margin: float64): void {.importc: "QTextDocument_setDocumentMargin".}
proc fcQTextDocument_adjustSize(self: pointer, ): void {.importc: "QTextDocument_adjustSize".}
proc fcQTextDocument_size(self: pointer, ): pointer {.importc: "QTextDocument_size".}
proc fcQTextDocument_blockCount(self: pointer, ): cint {.importc: "QTextDocument_blockCount".}
proc fcQTextDocument_lineCount(self: pointer, ): cint {.importc: "QTextDocument_lineCount".}
proc fcQTextDocument_characterCount(self: pointer, ): cint {.importc: "QTextDocument_characterCount".}
proc fcQTextDocument_setDefaultStyleSheet(self: pointer, sheet: struct_miqt_string): void {.importc: "QTextDocument_setDefaultStyleSheet".}
proc fcQTextDocument_defaultStyleSheet(self: pointer, ): struct_miqt_string {.importc: "QTextDocument_defaultStyleSheet".}
proc fcQTextDocument_undo(self: pointer, cursor: pointer): void {.importc: "QTextDocument_undo".}
proc fcQTextDocument_redo(self: pointer, cursor: pointer): void {.importc: "QTextDocument_redo".}
proc fcQTextDocument_clearUndoRedoStacks(self: pointer, ): void {.importc: "QTextDocument_clearUndoRedoStacks".}
proc fcQTextDocument_maximumBlockCount(self: pointer, ): cint {.importc: "QTextDocument_maximumBlockCount".}
proc fcQTextDocument_setMaximumBlockCount(self: pointer, maximum: cint): void {.importc: "QTextDocument_setMaximumBlockCount".}
proc fcQTextDocument_defaultTextOption(self: pointer, ): pointer {.importc: "QTextDocument_defaultTextOption".}
proc fcQTextDocument_setDefaultTextOption(self: pointer, option: pointer): void {.importc: "QTextDocument_setDefaultTextOption".}
proc fcQTextDocument_baseUrl(self: pointer, ): pointer {.importc: "QTextDocument_baseUrl".}
proc fcQTextDocument_setBaseUrl(self: pointer, url: pointer): void {.importc: "QTextDocument_setBaseUrl".}
proc fcQTextDocument_defaultCursorMoveStyle(self: pointer, ): cint {.importc: "QTextDocument_defaultCursorMoveStyle".}
proc fcQTextDocument_setDefaultCursorMoveStyle(self: pointer, style: cint): void {.importc: "QTextDocument_setDefaultCursorMoveStyle".}
proc fcQTextDocument_contentsChange(self: pointer, fromVal: cint, charsRemoved: cint, charsAdded: cint): void {.importc: "QTextDocument_contentsChange".}
proc fQTextDocument_connect_contentsChange(self: pointer, slot: int) {.importc: "QTextDocument_connect_contentsChange".}
proc fcQTextDocument_contentsChanged(self: pointer, ): void {.importc: "QTextDocument_contentsChanged".}
proc fQTextDocument_connect_contentsChanged(self: pointer, slot: int) {.importc: "QTextDocument_connect_contentsChanged".}
proc fcQTextDocument_undoAvailable(self: pointer, param1: bool): void {.importc: "QTextDocument_undoAvailable".}
proc fQTextDocument_connect_undoAvailable(self: pointer, slot: int) {.importc: "QTextDocument_connect_undoAvailable".}
proc fcQTextDocument_redoAvailable(self: pointer, param1: bool): void {.importc: "QTextDocument_redoAvailable".}
proc fQTextDocument_connect_redoAvailable(self: pointer, slot: int) {.importc: "QTextDocument_connect_redoAvailable".}
proc fcQTextDocument_undoCommandAdded(self: pointer, ): void {.importc: "QTextDocument_undoCommandAdded".}
proc fQTextDocument_connect_undoCommandAdded(self: pointer, slot: int) {.importc: "QTextDocument_connect_undoCommandAdded".}
proc fcQTextDocument_modificationChanged(self: pointer, m: bool): void {.importc: "QTextDocument_modificationChanged".}
proc fQTextDocument_connect_modificationChanged(self: pointer, slot: int) {.importc: "QTextDocument_connect_modificationChanged".}
